# NativeRestrictionBypass

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  build.xml  settings.gradle
androidTest/: build.gradle
androidTest/src/androidTest/java/com/kobil/libloader/: ExampleInstrumentedTest.kt
androidTest/src/main/: AndroidManifest.xml
androidTest/src/main/cpp/: interface.cpp
androidTest/src/main/java/com/kobil/libloader/: MainActivity.kt
androidTest/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/main/java/com/kobil/libloader/: NativeInterface.java
app/src/test/java/com/kobil/libloader/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: Bypass.cpp  CMakeLists.txt  DiskLoader.cpp  DiskLoader.h  Library.cpp  Library.h  MemLInker.cpp  MemLInker.h  logging.cpp
src/elf/: Elf.cpp  Elf.h  Elf32Parser.cpp  Elf32Parser.h  Elf64Parser.cpp  Elf64Parser.h  IBinary.h  IElfParser.cpp  IElfParser.h
src/include/NativeBypass/: bypass.h
src/tools/: LoggingCallback.cpp  LoggingCallback.h  MapsParser.cpp  MapsParser.h
